--- a/css/estilos.css
+++ b/css/estilos.css
@@ -18,6 +18,7 @@ input{
     margin-bottom: 12px;
 }
 .login{
-    border: 1px solid cyan;
+    border: 1px solid rgb(103, 17, 224);
     padding: 15px 5px;
+    margin-bottom: 10px;
 }
